Global announcements (#487)
* Added a global announcements feature and admin endpoint /admin/announcements

The global announcements have a "global_announcements" settings name
to avoid configuration inheritance with the "announcements" settings name

* Updated openapi docs with the /admin/announcements API

* Documentation update

* Typing annotations added to announcement controller and service

* Typing changes with __future__.annotations

* A few more type hints.
