# api/admin/routes.py
@@ -623,6 +623,14 @@ def sitewide_setting(key):
     )
 
 
+@app.route("/admin/announcements", methods=["GET", "POST"])
+@returns_json_or_response_or_problem_detail
+@requires_admin
+@requires_csrf_token
+def announcements_for_all():
+    return app.manager.admin_announcement_service.process_many()
+
+
 @app.route("/admin/logging_services", methods=["GET", "POST"])
 @returns_json_or_response_or_problem_detail
 @requires_admin
